# docs_to_markdown

./: CLAUDE.md  README.md  pyproject.toml  run_conversion.py
src/: converter.py  ocr.py
tests/: test_converter.py  test_integration.py  test_ocr.py
